[package]
name = "py_wrapper"
version = "0.1.0"
authors = ["HuszarG <gergohuszar06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_wrapper"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
crossbeam-channel = "0.5.1"
